--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+.App{
+    text-align:center;
+    display:flex;
+    min-height: 100vh;
+    align-items: left;
+    justify-content: center;
+   background-image: linear-gradient(79deg,rgb(255, 255, 255),rgb(255, 255, 255) 48% ,rgb(255, 255, 255));
 }
+.auth-form-container,.login-form,.register-form{
+    display: flex;
+    flex-direction:column;
+   
+   
+}
+@media screen (min-width:600px){
+ } .auth-form-container{
+        padding: 5rem;
+        border: 1px solid rgb(61, 58, 58);
+        border-radius: 10px;
+        margin: 0.5rem;
+}
+   h2{
+    text-align: left;
+    padding: 1rem;
+    margin: 0.5rem;
+    color: rgb(129, 84, 163);
+   } 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+label{
+text-align: left;
+padding: 0.25rem 0;
+font-weight: 490;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+    input{
+    margin: 0.2rem 0 ;
+    padding: 0.5rem;
+   
+    border-radius: 10px;
+    }
+    
+    button{
+    border: none;
+    background-color:rgb(234, 247, 165);
+    padding: 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    
+    }
+    .link-btn{
+    color: rgb(129, 84, 163);
+    text-decoration: underline;
+    background: none;
+    font-weight: bold;
+    
+    }
